# vecna

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  SECURITY.md  pyproject.toml  run_tests.sh
.github/workflows/: build.yaml  test.yaml
tests/core/: test_vault.py
vecna/: config.py  main.py  models.py
vecna/commands/: __init__.py  generate.py  init.py  lock.py  unlock.py  version.py
vecna/commands/alias/: add.py  delete.py  get.py  list.py  update.py
vecna/commands/credential/: __init__.py  add.py
vecna/commands/credentials/: __init__.py  add.py  delete.py  get.py  list.py  update.py
vecna/commands/creds/: add.py
vecna/core/: session.py  vault.py
vecna/utils/: __init__.py  clipboard.py  password_generator.py  secure_file.py
