[project]
name = "vecna"
version = "0.1.0"
description = "Vault for Encrypted Credentials and Note Access"
authors = [{ name = "Thomas Rapai", email = "th.rapai@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer",
    "cryptography",
    "pyperclip"
]

[project.scripts]
vecna = "vecna.main:app"

[tool.isort]
profile = "hug"
multi_line_output = "3"
force_grid_wrap = "2"
lines_after_imports = "2"

[tool.black]
line-length = 100

[tool.pylint.messages_control]
output-format = "colorized"
disable = [
    "C0114",
    "W0718",
    "C0415",
    "R0801",
    "C0209",
    "W0622"
]
