[project]
name = "vecna"
version = "0.1.0"
description = "Vault for Encrypted Credentials, Notes, and Assets"
authors = [{ name = "Thomas Rapai", email = "th.rapai@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer",
    "cryptography",
    "pyperclip"
]

[project.scripts]
vecna = "vecna.main:app"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff]
line-length=100
